Fixed issue where slogan was nvisible due to the hamburger background.

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -7,7 +7,7 @@
 #burger-jumbotron {
     background-image: url('../img/burger-white-background.jpeg');
     background-position: left;
-    background-size: 163%;
+    background-size: 172%;
     background-repeat: no-repeat;
 
 }
@@ -18,6 +18,10 @@
     text-shadow: 
         1px 1px 0px #000000,
         1px 1px 5px #999999;
+}
+
+#slogan {
+    padding: 0 29%;
 }
 
 #burger-title, #slogan {
@@ -50,5 +54,9 @@
 @media only screen and (max-width: 477px) {
     #burger-title {
         font-size: 2.7rem;
+    }
+
+    #slogan {
+        font-size: 1rem;
     }
   }
